--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <title>this is my website</title>
+
 <h1>my name is nandan</h1>
+<h2>bitch</h2>
 <p>welcome to git</p>
 <p>hi this is nandan</p>
 </html>
